--- a/projects.json
+++ b/projects.json
@@ -1,33 +1,12 @@
 [
   {
-    "id": 1,
-    "title": "Website design for finance startup",
-    "description": "Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "image": "/images/preview-5.jpeg",
-    "url": "#",
-    "category": "Web Design",
-    "company": "App X",
-    "slug": "website-design-for-finance-startup"
-  },
-  {
-    "id": 2,
-    "title": "Brand refresh for Technology app",
-    "description": "Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "image": "/images/preview-6.jpeg",
-    "url": "#",
-    "category": "Branding",
-    "company": "Technology",
-    "slug": "brand-refresh-for-technology-app"
-  },
-  {
     "id": 3,
-    "title": "Website redesign for Consulting X",
-    "description": "Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "title": "Shop Smart",
+    "description": "The application streamlines the shopping process by automatically scanning product QR codes for seamless checkout. It securely manages user and item information, allowing users to easily track and manage their shopping lists through a mobile app. Additionally, it includes a feature that predicts sales trends based on historical purchase data, providing valuable insights for store administrators.",
     "image": "/images/preview-9.jpeg",
     "url": "#",
-    "category": "Web Design",
-    "company": "Consulting X",
-    "slug": "website-design-for-consulting-x"
+    "category": "React Native, Firebase, Python, OpenCV",
+    "slug": "https://github.com/tanvi217/Shop-Smart"
   },
   {
     "id": 4,
@@ -35,8 +14,7 @@
     "description": "A captivating 2D endless runner game where Aerith must dodge ghosts for as long as possible. As you progress, the difficulty ramps up.",
     "image": "/images/aerith-adv.png",
     "url": "#",
-    "category": "Unity",
-    "company": "Edu X",
+    "category": "Unity, C#",
     "slug": "https://github.com/tanvi217/Aerith-s-Adventure"
   }
 ]
