--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,7 @@
     "id": 3,
     "title": "Shop Smart",
     "description": "The application streamlines the shopping process by automatically scanning product QR codes for seamless checkout. It securely manages user and item information, allowing users to easily track and manage their shopping lists through a mobile app. Additionally, it includes a feature that predicts sales trends based on historical purchase data, providing valuable insights for store administrators.",
-    "image": "/images/preview-9.jpeg",
+    "image": "",
     "url": "#",
     "category": "React Native, Firebase, Python, OpenCV",
     "slug": "https://github.com/tanvi217/Shop-Smart"
