--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "homepage": "https://tanviagarwal.github.io/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
