--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "vite-project",
+  "name": "tanviagarwal",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
-  "homepage": "https://tanviagarwal.github.io/",
+  "homepage": "https://tanvi217.github.io/tanviagarwal.github.io/",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.6",
