--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tanviagarwal",
-  "private": true,
+  "private": false,
   "version": "1.0.0",
   "type": "module",
   "homepage": "https://tanvi217.github.io/tanviagarwal.github.io/",
