--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://tanvi217.github.io/tanviagarwal.github.io/",
+  "homepage": "https://tanvi217.github.io",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
